sumo/tests/sumo/errors/person/unconnected_ride/errors.sumo
Error: Disconnected plan for person 'p1'.
Quitting (on error).
